hphp/test/zend/good/Zend/tests/bug50146.php.expectf
bool(false)
bool(false)

Catchable fatal error: Closure object cannot have properties in %s/bug50146.php on line 10
